# scribbleway

./: .gitignore  CMakeLists.txt  CONTEXT.md  Dockerfile.test  Dockerfile.vnc  README.md  add_shape.py  entrypoint-vnc.sh  errorlog.txt  install.sh  org.kde.scribbleway.desktop  scribbleway-autostart.desktop  scribbleway.flatpak  scribbleway_0.1-1_amd64.deb  start-kde-manual.sh  uninstall.sh
applet/: metadata.json
applet/contents/config/: main.xml
applet/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
debian/: changelog  control  scribbleway.install
docs/superpowers/plans/: 2026-07-10-roughness-algorithm.md  2026-07-12-glow-effect.md  2026-07-21-cursor-feedback.done.md  2026-07-21-export-image.md  2026-07-21-fill-color.md  2026-07-21-freehand-smoothing-done.md  2026-07-21-glow-preview.md  2026-07-21-group-ungroup.md  2026-07-21-live-preview-roughness.md  2026-07-21-multi-monitor.md  2026-07-21-redo.md  2026-07-21-roughness-slider-done.md  2026-07-21-save-load-sessions.md  2026-07-21-shape-duplication.md  2026-07-21-snap-grid.md  2026-07-22-attached-text-done.md  2026-07-22-shape-bindings.md
docs/superpowers/specs/: 2026-07-10-roughness-algorithm-design.md  2026-07-12-glow-effect-design.md  2026-07-22-attached-text-design.md
packaging/: build_deb.sh  build_flatpak.sh
packaging/arch/: Dockerfile.arch  PKGBUILD  build_arch_docker.sh  scribbleway-git-0.1.r56.9ea383c-1-x86_64.pkg.tar.zst  scribbleway-git-debug-0.1.r56.9ea383c-1-x86_64.pkg.tar.zst
packaging/flatpak/: org.kde.scribbleway.yml
src/applet-plugin/: CMakeLists.txt  appletbackend.cpp  appletbackend.h
src/common/: dbusutils.h
src/overlay/: CMakeLists.txt  main.cpp  overlaycontroller.cpp  overlaycontroller.h  shapesmodel.cpp  shapesmodel.h
src/overlay/qml/: ToolCursorBadge.qml  main.qml
src/overlay/qml/shapes/: ArrowShape.qml  BaseShape.qml  EllipseShape.qml  FreehandShape.qml  LineShape.qml  RectangleShape.qml  RoughPathGenerator.js  RoughStroke.qml  TextShape.qml
tests/: CMakeLists.txt  shapesmodeltest.cpp
